--- a/packages/graphql-validate-fixtures/tsconfig.json
+++ b/packages/graphql-validate-fixtures/tsconfig.json
@@ -5,6 +5,14 @@
     "moduleResolution": "node",
     "strict": true,
     "noUnusedLocals": true,
-    "noUnusedParameters": true
-  }
+    "noUnusedParameters": true,
+    "lib": [
+      "es2015",
+      "es2016"
+    ]
+  },
+  "exclude": [
+    "test/**",
+    "node_modules/**"
+  ]
 }
