--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,11 +7,13 @@
     "**/CVS": true,
     "**/.DS_Store": true,
     "**/node_modules": true,
-    "**/lib": true
+    "**/lib": true,
+    "**/yarn.lock": true
   },
   "search.exclude": {
     "**/node_modules": true,
     "**/bower_components": true,
-    "**/lib": true
+    "**/lib": true,
+    "**/yarn.lock": true
   }
 }
