--- a/package.json
+++ b/package.json
@@ -7,9 +7,13 @@
   },
   "devDependencies": {
     "@types/jest": "^19.2.3",
+    "graphql": "^0.9.6",
     "jest": "^20.0.1",
     "lerna": "^2.0.0-rc.4",
     "ts-jest": "^20.0.3",
     "typescript": "^2.3.2"
+  },
+  "dependencies": {
+    "yargs": "^8.0.1"
   }
 }
