--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,10 +7,10 @@
     "**/CVS": true,
     "**/.DS_Store": true,
     "**/node_modules": true,
-    "**/lib": true,
+    "**/lib": false,
     "**/yarn.lock": true,
     "packages/graphql-tool-utilities/*.js": true,
-    "packages/**/*.d.ts": true
+    "packages/**/*.d.ts": false
   },
   "search.exclude": {
     "**/node_modules": true,
