--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "graphql-tools",
   "license": "MIT",
   "scripts": {
+    "ts": "tsc --noEmit",
     "pretest": "rm -rf packages/graphql-tool-utilities/node_modules/graphql && rm -rf packages/graphql-validate-fixtures/node_modules/graphql",
     "test": "jest --config ./config/jest/config.json",
-    "test:watch": "yarn run test -- --watch"
+    "test:watch": "yarn run test -- --watch",
+    "check": "yarn run ts && yarn run test"
   },
   "devDependencies": {
     "@types/jest": "^19.2.3",
@@ -14,9 +16,5 @@
     "ts-jest": "^20.0.3",
     "typescript": "^2.3.2"
   },
-  "dependencies": {
-    "@types/glob": "^5.0.30",
-    "chalk": "^1.1.3",
-    "yargs": "^8.0.1"
-  }
+  "dependencies": {}
 }
