--- a/packages/graphql-validate-fixtures/package.json
+++ b/packages/graphql-validate-fixtures/package.json
@@ -4,18 +4,24 @@
   "version": "0.1.0",
   "main": "lib/index.js",
   "license": "MIT",
+  "bin": "./bin/graphql-validate-fixtures",
   "scripts": {
-    "build": "tsc"
+    "build": "tsc",
+    "prepublish": "in-publish && yarn run build || :"
   },
   "dependencies": {
-    "@types/fs-extra": "^3.0.0",
-    "@types/graphql": "^0.9.1",
+    "chalk": "^1.1.3",
     "fs-extra": "^3.0.1",
+    "glob": "^7.1.1",
     "graphql": "^0.9.6",
-    "graphql-tool-utilities": "^1.0.0",
-    "glob": "^7.1.1"
+    "graphql-tool-utilities": "^0.1.0",
+    "yargs": "^8.0.1"
   },
   "devDependencies": {
+    "@types/fs-extra": "^3.0.1",
+    "@types/glob": "^5.0.30",
+    "@types/graphql": "^0.9.1",
+    "in-publish": "^2.0.0",
     "typescript": "^2.3.2"
   }
 }
