--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,18 @@
     "moduleResolution": "node",
     "strict": true,
     "noUnusedLocals": true,
-    "noUnusedParameters": true
-  }
+    "noUnusedParameters": true,
+    "lib": [
+      "es2015",
+      "es2016",
+      "es2017"
+    ]
+  },
+  "include": [
+    "**/*.ts"
+  ],
+  "exclude": [
+    "node_modules",
+    "packages/*/node_modules"
+  ]
 }
