--- a/packages/graphql-tool-utilities/package.json
+++ b/packages/graphql-tool-utilities/package.json
@@ -3,6 +3,11 @@
   "description": "Common utilities for GraphQL developer tools",
   "version": "0.1.0",
   "license": "MIT",
+  "repository": "https://github.com/lemonmade/graphql-tools/tree/master/packages/graphql-tool-utilities",
+  "tags": [
+    "graphql",
+    "apollo"
+  ],
   "files": [
     "ast.js",
     "ast.d.ts",
