--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "devDependencies": {
     "@types/jest": "^19.2.3",
+    "@types/node": "^7.0.18",
     "graphql": "^0.9.6",
     "jest": "^20.0.1",
     "lerna": "^2.0.0-rc.4",
