--- a/package.json
+++ b/package.json
@@ -4,19 +4,23 @@
   "license": "MIT",
   "scripts": {
     "ts": "tsc --noEmit",
-    "pretest": "rm -rf packages/graphql-tool-utilities/node_modules/graphql && rm -rf packages/graphql-validate-fixtures/node_modules/graphql && node packages/graphql-validate-fixtures/scripts/introspection.js",
+    "pretest": "rm -rf packages/graphql-tool-utilities/node_modules/graphql && rm -rf packages/graphql-validate-fixtures/node_modules/graphql && lerna run pretest",
     "test": "jest --config ./config/jest/config.json",
     "test:watch": "yarn run test -- --watch",
     "check": "yarn run ts && yarn run test"
   },
   "devDependencies": {
+    "@types/chalk": "^0.4.31",
+    "@types/fs-extra": "^3.0.1",
+    "@types/glob": "^5.0.30",
+    "@types/graphql": "^0.9.1",
     "@types/jest": "^19.2.3",
     "@types/node": "^7.0.18",
+    "@types/yargs": "^6.6.0",
     "graphql": "^0.9.6",
     "jest": "^20.0.1",
     "lerna": "^2.0.0-rc.4",
     "ts-jest": "^20.0.3",
     "typescript": "^2.3.2"
-  },
-  "dependencies": {}
+  }
 }
