--- a/packages/graphql-typescript-definitions/package.json
+++ b/packages/graphql-typescript-definitions/package.json
@@ -5,15 +5,20 @@
   "author": "Chris Sauve <chrismsauve@gmail.com>",
   "license": "MIT",
   "scripts": {
+    "build": "tsc",
     "pretry": "find example -type f -name '*.d.ts' -delete",
-    "try": "ts-node --disableWarnings --project example example/build.ts"
+    "try": "bin/graphql-typescript-definitions 'example/**/*.graphql' --schema-path './example/schema.json'"
   },
   "devDependencies": {
+    "@types/chalk": "^0.4.31",
     "ts-node": "^3.0.4",
     "typescript": "^2.3.2"
   },
   "dependencies": {
+    "@types/chokidar": "^1.6.0",
     "@types/graphql": "^0.9.1",
+    "chalk": "^1.1.3",
+    "chokidar": "^1.7.0",
     "fs-extra": "^3.0.1",
     "glob": "^7.1.1",
     "graphql": "^0.9.1",
