--- a/packages/graphql-typescript-definitions/package.json
+++ b/packages/graphql-typescript-definitions/package.json
@@ -18,6 +18,7 @@
     "@types/chokidar": "^1.6.0",
     "@types/graphql": "^0.9.1",
     "chalk": "^1.1.3",
+    "change-case": "^3.0.1",
     "chokidar": "^1.7.0",
     "fs-extra": "^3.0.1",
     "glob": "^7.1.1",
