Final set of updates

--- a/config/jest/config.json
+++ b/config/jest/config.json
@@ -1,7 +1,8 @@
 {
   "rootDir": "../../",
   "modulePathIgnorePatterns": [
-    "packages/.*/lib"
+    "packages/.*/lib",
+    "packages/.*/test/fixtures/.*d.ts"
   ],
   "testRegex": ".*\\.test\\.ts$",
   "transform": {
