--- a/.gitignore
+++ b/.gitignore
@@ -3,4 +3,6 @@ node_modules
 **/lib
 packages/**/*.d.ts
 packages/graphql-tool-utilities/*.js
-packages/graphql-validate-fixtures/**/schema.json
+packages/graphql-validate-fixtures/test/fixtures/**/schema.json
+packages/graphql-typescript-definitions/test/fixtures/**/schema.json
+packages/graphql-typescript-definitions/test/fixtures/**/*.d.ts
