--- a/packages/graphql-typescript-definitions/package.json
+++ b/packages/graphql-typescript-definitions/package.json
@@ -7,9 +7,7 @@
   "scripts": {
     "build": "tsc",
     "pretest": "yarn run build",
-    "prepublish": "in-publish && yarn run build || :",
-    "pretry": "find example -type f -name '*.d.ts' -delete",
-    "try": "bin/graphql-typescript-definitions 'example/**/*.graphql' --schema-path './example/schema.json'"
+    "prepublish": "in-publish && yarn run build || :"
   },
   "devDependencies": {
     "@types/chalk": "^0.4.31",
