--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ packages/graphql-tool-utilities/*.js
 packages/graphql-validate-fixtures/test/fixtures/**/schema.json
 packages/graphql-typescript-definitions/test/fixtures/**/schema.json
 packages/graphql-typescript-definitions/test/fixtures/**/*.d.ts
+/lerna-debug.log
