Expose type definitions

--- a/packages/graphql-typescript-definitions/tsconfig.json
+++ b/packages/graphql-typescript-definitions/tsconfig.json
@@ -11,7 +11,8 @@
     "experimentalDecorators": true,
     "allowSyntheticDefaultImports": true,
     "noUnusedParameters": true,
-    "noUnusedLocals": true
+    "noUnusedLocals": true,
+    "declaration": true
   },
   "include": [
     "src/*"
