--- a/packages/graphql-typescript-definitions/package.json
+++ b/packages/graphql-typescript-definitions/package.json
@@ -2,6 +2,7 @@
   "name": "graphql-typescript-definitions",
   "version": "0.7.2",
   "main": "lib/index.js",
+  "types": "lib",
   "author": "Chris Sauve <chrismsauve@gmail.com>",
   "description": "Generate TypeScript definition files from .graphql documents",
   "license": "MIT",
