--- a/packages/graphql-validate-fixtures/package.json
+++ b/packages/graphql-validate-fixtures/package.json
@@ -18,7 +18,7 @@
     "chalk": "^1.1.3",
     "fs-extra": "^3.0.1",
     "glob": "^7.1.2",
-    "graphql": "^0.10.1",
+    "graphql": "<1.0.0",
     "graphql-tool-utilities": "^0.6.2",
     "yargs": "^8.0.1"
   },
