--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "rimraf": "^2.6.2",
-    "ts-jest": "^22.4.2"
+    "ts-jest": "^22.4.2",
+    "typescript": "~2.7.2"
   },
   "jest": {
     "setupFiles": [
