🛠️ fix template having wrong tsconfig path

--- a/packages/example-package/tsconfig.json
+++ b/packages/example-package/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "extends": "../../tsconfig.template.json",
+  "extends": "../../tsconfig.json",
   "compileOnSave": false,
   "compilerOptions": {
     "outDir": "./dist",
