Remove typescript dev dependency in sub package

--- a/packages/example-package/package.json
+++ b/packages/example-package/package.json
@@ -10,9 +10,5 @@
     "prepublish": "yarn run build"
   },
   "author": "Shopify Inc.",
-  "dependencies": {
-  },
-  "devDependencies": {
-    "typescript": "^2.5.3"
-  }
+  "dependencies": {}
 }
