:memo: Updating documentation

--- a/packages/jest-mock-router/package.json
+++ b/packages/jest-mock-router/package.json
@@ -2,7 +2,7 @@
   "name": "@shopify/jest-mock-router",
   "version": "1.0.0",
   "license": "MIT",
-  "description": "",
+  "description": "Jest + Enzyme mocks for React Router 3.x.",
   "main": "dist/index.js",
   "scripts": {
     "build": "tsc",
