--- a/packages/jest-koa-mocks/package.json
+++ b/packages/jest-koa-mocks/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@shopify/jest-mock-koa",
+  "name": "@shopify/jest-koa-mocks",
   "version": "1.0.1",
   "license": "MIT",
   "description": "",
