:ok_hand: addressing review comments

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -29,5 +29,6 @@
   "eslint.validate": [
     "typescript",
     "typescriptreact"
-  ]
+  ],
+  "javascript.implicitProjectConfig.experimentalDecorators": true
 }
