--- a/packages/enzyme-utilities/package.json
+++ b/packages/enzyme-utilities/package.json
@@ -10,6 +10,7 @@
   },
   "author": "Shopify Inc.",
   "dependencies": {
+    "@shopify/javascript-utilities": "^2.1.0",
     "lodash": "^4.17.5"
   },
   "devDependencies": {
