--- a/packages/jest-dom-mocks/package.json
+++ b/packages/jest-dom-mocks/package.json
@@ -4,6 +4,9 @@
   "license": "MIT",
   "description": "",
   "main": "dist/index.js",
+  "publishConfig": {
+    "@shopify:registry": "https://packages.shopify.io/shopify/node/npm/"
+  },
   "scripts": {
     "build": "tsc",
     "prepublish": "yarn run build"
