--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
   "compilerOptions": {
     "moduleResolution": "node",
     "target": "es5",
+    "esModuleInterop": true,
     "declaration": true,
     "jsx": "react",
     "strictNullChecks": true,
