--- a/packages/jest-mock-apollo/package.json
+++ b/packages/jest-mock-apollo/package.json
@@ -4,6 +4,7 @@
   "license": "MIT",
   "description": "Jest + Enzyme mocks for Apollo 2.x.",
   "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "publishConfig": {
     "@shopify:registry": "https://packages.shopify.io/shopify/node/npm/"
   },
@@ -16,7 +17,7 @@
     "apollo-cache-inmemory": "^1.1.12",
     "apollo-client": "^2.2.8",
     "apollo-link": "^1.2.1",
-    "graphql": "^0.13.2",
+    "graphql": "0.11 - 0.13",
     "graphql-tool-utilities": "^0.6.2"
   },
   "devDependencies": {
