--- a/packages/jest-dom-mocks/package.json
+++ b/packages/jest-dom-mocks/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/jest-dom-mocks",
-  "version": "1.1.0",
+  "version": "2.0.0-0",
   "license": "MIT",
   "description": "",
   "main": "dist/index.js",
