--- a/packages/jest-koa-mocks/package.json
+++ b/packages/jest-koa-mocks/package.json
@@ -18,6 +18,7 @@
   },
   "devDependencies": {
     "@types/express": "^4.11.1",
-    "@types/koa": "^2.0.44"
+    "@types/koa": "^2.0.44",
+    "typescript": "~2.7.2"
   }
 }
