--- a/packages/koa-shopify-auth/package.json
+++ b/packages/koa-shopify-auth/package.json
@@ -15,5 +15,8 @@
   "dependencies": {
     "@types/koa": "^2.0.44",
     "koa": "^2.5.0"
+  },
+  "devDependencies": {
+    "typescript": "~2.7.2"
   }
 }
