⬆️ update jest-dom-mocks (#56)

--- a/packages/koa-shopify-auth/package.json
+++ b/packages/koa-shopify-auth/package.json
@@ -19,7 +19,7 @@
     "safe-compare": "^1.1.2"
   },
   "devDependencies": {
-    "@shopify/jest-dom-mocks": "^2.0.0-0",
+    "@shopify/jest-dom-mocks": "^2.0.1",
     "@types/safe-compare": "^1.1.0",
     "typescript": "~2.7.2"
   }
