--- a/packages/enzyme-utilities/package.json
+++ b/packages/enzyme-utilities/package.json
@@ -4,6 +4,7 @@
   "license": "MIT",
   "description": "Enzyme utilities for testing React components.",
   "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "publishConfig": {
     "@shopify:registry": "https://packages.shopify.io/shopify/node/npm/"
   },
