✨🔒 add nonce to koa auth middlewares (#58)
* ✨ feature: add nonce to koa auth middlewares

* ✅ test that oauth-start sets nonce cookie

* 👌 chris lint

--- a/packages/koa-shopify-auth/package.json
+++ b/packages/koa-shopify-auth/package.json
@@ -22,6 +22,7 @@
   "devDependencies": {
     "@shopify/jest-dom-mocks": "^2.0.1",
     "@types/safe-compare": "^1.1.0",
+    "nonce": "^1.0.4",
     "typescript": "~2.7.2"
   }
 }
