--- a/packages/jest-koa-mocks/package.json
+++ b/packages/jest-koa-mocks/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/jest-koa-mocks",
-  "version": "1.0.6",
+  "version": "2.0.0-beta.1",
   "license": "MIT",
   "description": "",
   "main": "dist/index.js",
