--- a/packages/react-html/package.json
+++ b/packages/react-html/package.json
@@ -15,6 +15,7 @@
   "author": "Shopify Inc.",
   "dependencies": {
     "@shopify/react-serialize": "^0.1.0",
+    "@types/react-helmet": "^5.0.6",
     "react-helmet": "^5.2.0"
   },
   "devDependencies": {
