--- a/packages/with-env/package.json
+++ b/packages/with-env/package.json
@@ -7,7 +7,7 @@
   "types": "dist/index.d.ts",
   "scripts": {
     "build": "tsc",
-    "prepublish": "yarn run build"
+    "prepublishOnly": "yarn run build"
   },
   "publishConfig": {
     "@shopify:registry": "https://packages.shopify.io/shopify/node/npm/"
