💖 make everything public (#83)
* 💖 make everything public

* 👷‍♀️ remove token printing from circle config

--- a/packages/react-html/package.json
+++ b/packages/react-html/package.json
@@ -10,7 +10,7 @@
     "prepublish": "yarn run build"
   },
   "publishConfig": {
-    "@shopify:registry": "https://packages.shopify.io/shopify/node/npm/"
+    "access": "public"
   },
   "author": "Shopify Inc.",
   "dependencies": {
