--- a/packages/jest-mock-apollo/package.json
+++ b/packages/jest-mock-apollo/package.json
@@ -6,7 +6,7 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "publishConfig": {
-    "@shopify:registry": "https://packages.shopify.io/shopify/node/npm/"
+    "access": "public"
   },
   "scripts": {
     "build": "tsc",
