--- a/packages/react-html/package.json
+++ b/packages/react-html/package.json
@@ -10,7 +10,8 @@
     "prepublish": "yarn run build"
   },
   "publishConfig": {
-    "access": "public"
+    "access": "public",
+    "@shopify:registry": "https://registry.npmjs.org"
   },
   "author": "Shopify Inc.",
   "dependencies": {
