--- a/packages/jest-mock-router/package.json
+++ b/packages/jest-mock-router/package.json
@@ -14,6 +14,14 @@
     "prepublishOnly": "yarn run build"
   },
   "author": "Shopify Inc.",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Shopify/quilt.git"
+  },
+  "bugs": {
+    "url": "https://github.com/shopify/quilt/issues"
+  },
+  "homepage": "https://github.com/shopify/quilt/packages/jest-mock-router/README.md",
   "devDependencies": {
     "@types/react-router": "^3.0.0",
     "react": "^16.2.0",
