--- a/packages/react-serialize/package.json
+++ b/packages/react-serialize/package.json
@@ -14,6 +14,14 @@
     "@shopify:registry": "https://registry.npmjs.org"
   },
   "author": "Shopify Inc.",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Shopify/quilt.git"
+  },
+  "bugs": {
+    "url": "https://github.com/shopify/quilt/issues"
+  },
+  "homepage": "https://github.com/shopify/quilt/packages/react-serialize/README.md",
   "dependencies": {
     "serialize-javascript": "^1.5.0"
   },
