--- a/packages/graphql-tool-utilities/tsconfig.json
+++ b/packages/graphql-tool-utilities/tsconfig.json
@@ -1,9 +1,9 @@
 {
+  "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "declaration": true,
-    "moduleResolution": "node",
-    "strict": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true
-  }
+    "rootDir": "./"
+  },
+  "include": [
+    "./**/*.ts"
+  ]
 }
