--- a/packages/graphql-typescript-definitions/package.json
+++ b/packages/graphql-typescript-definitions/package.json
@@ -3,31 +3,41 @@
   "version": "0.7.5",
   "main": "lib/index.js",
   "types": "lib",
-  "author": "Chris Sauve <chrismsauve@gmail.com>",
   "description": "Generate TypeScript definition files from .graphql documents",
   "license": "MIT",
+  "publishConfig": {
+    "access": "public",
+    "@shopify:registry": "https://registry.npmjs.org"
+  },
   "bin": "./bin/graphql-typescript-definitions",
-  "repository": "https://github.com/lemonmade/graphql-tools/tree/master/packages/graphql-typescript-definitions",
+  "author": "Shopify Inc.",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Shopify/graphql-tools-web.git"
+  },
+  "bugs": {
+    "url": "https://github.com/shopify/graphql-tools-web/issues"
+  },
+  "homepage": "https://github.com/shopify/graphql-tools-web/blob/master/packages/graphql-typescript-definitions",
   "scripts": {
     "build": "tsc",
-    "pretest": "yarn run build",
-    "prepublish": "in-publish && yarn run build || :"
+    "pretest": "yarn build",
+    "prepublishOnly": "yarn build"
   },
   "devDependencies": {
-    "@types/chalk": "^0.4.31",
-    "in-publish": "^2.0.0",
-    "ts-node": "^3.0.6",
-    "typescript": "^2.3.4"
+    "@types/chalk": "^2.2.0",
+    "ts-node": "^6.0.2",
+    "typescript": "^2.8.3"
   },
   "dependencies": {
     "@types/chokidar": "^1.7.0",
-    "@types/graphql": "^0.9.1",
-    "chalk": "^1.1.3",
+    "@types/graphql": "^0.13.0",
+    "chalk": "^2.4.1",
     "change-case": "^3.0.1",
-    "chokidar": "^1.7.0",
-    "fs-extra": "^3.0.1",
+    "chokidar": "^2.0.3",
+    "fs-extra": "^6.0.0",
     "glob": "^7.1.2",
-    "graphql": "<1.0.0",
+    "graphql": "0.13.2",
     "graphql-tool-utilities": "^0.6.2"
   }
 }
