--- a/package.json
+++ b/package.json
@@ -19,14 +19,29 @@
   "workspaces": [
     "packages/*"
   ],
+  "eslintConfig": {
+    "extends": [
+      "plugin:shopify/typescript",
+      "plugin:shopify/typescript-prettier",
+      "plugin:shopify/jest",
+      "plugin:shopify/node"
+    ]
+  },
   "scripts": {
     "bootstrap": "lerna bootstrap",
     "type-check": "tsc --noEmit",
     "pretest": "lerna run pretest",
     "test": "jest --config ./config/jest/config.json",
     "test:watch": "yarn test --watch",
-    "lint": "",
-    "prepublishOnly": "yarn type-check && yarn test"
+    "lint:scripts": "eslint './**/*.ts' --format codeframe --cache true --max-warnings 0",
+    "lint:json": "prettier './**/*.json' --list-different",
+    "lint:graphql": "prettier './**/*.{graphql,gql}' --list-different",
+    "lint": "yarn lint:scripts && yarn lint:json && yarn lint:graphql",
+    "format:scripts": "yarn lint:scripts --fix",
+    "format:json": "prettier './**/*.json' --write",
+    "format:graphql": "prettier './**/*.{graphql,gql}' --write",
+    "format": "yarn format:scripts && yarn format:json && yarn format:graphql",
+    "prepublishOnly": "yarn type-check && yarn lint && yarn test"
   },
   "devDependencies": {
     "@types/fs-extra": "^5.0.2",
@@ -35,10 +50,13 @@
     "@types/jest": "^22.2.3",
     "@types/node": "^10.0.4",
     "@types/yargs": "^11.0.0",
+    "eslint": "^4.19.1",
+    "eslint-plugin-shopify": "^22.0.0",
     "graphql": "0.13.2",
     "in-publish": "^2.0.0",
     "jest": "^22.4.3",
     "lerna": "^2.11.0",
+    "prettier": "^1.12.1",
     "ts-jest": "^22.4.4",
     "typescript": "^2.8.3"
   }
