:bug: fix prepublish in react-html

--- a/packages/react-html/package.json
+++ b/packages/react-html/package.json
@@ -7,7 +7,7 @@
   "types": "dist/index.d.ts",
   "scripts": {
     "build": "tsc",
-    "prepublish": "yarn run build"
+    "prepublishOnly": "yarn run build"
   },
   "publishConfig": {
     "access": "public",
