--- a/packages/react-html/package.json
+++ b/packages/react-html/package.json
@@ -23,8 +23,10 @@
   },
   "homepage": "https://github.com/shopify/quilt/packages/react-html/README.md",
   "dependencies": {
-    "@shopify/react-serialize": "^1.0.3",
+    "@shopify/react-serialize": "^1.0.0",
     "@types/react-helmet": "^5.0.6",
+    "react": "^16.3.2",
+    "react-dom": "^16.3.2",
     "react-helmet": "^5.2.0"
   },
   "devDependencies": {
