--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   ],
   "devDependencies": {
     "@types/jest": "^22.2.1",
+    "@types/react-helmet": "^5.0.6",
     "codecov": "^3.0.2",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
