--- a/packages/react-html/package.json
+++ b/packages/react-html/package.json
@@ -2,7 +2,7 @@
   "name": "@shopify/react-html",
   "version": "2.0.8",
   "license": "MIT",
-  "description": "",
+  "description": "A component to render your react app with no static HTML.",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
@@ -24,9 +24,11 @@
   "homepage": "https://github.com/shopify/quilt/packages/react-html/README.md",
   "dependencies": {
     "@shopify/react-serialize": "^1.0.3",
-    "react": "^16.3.2",
-    "react-dom": "^16.3.2",
     "react-helmet": "^5.2.0"
+  },
+  "peerDependencies": {
+    "react": "^16.3.2",
+    "react-dom": "^16.3.2"
   },
   "devDependencies": {
     "@shopify/with-env": "^1.0.0",
