Revamp typescript defs (#2)
* Most features minus fragments

* Improve typing of the DocumentNode

* Basic typename

* Variables

* Fix non-typed variables

* Interfaces and unions

* different operation types, get it compiling

* move some files around

* Build schema

* Support for fragment-only documents

* Minor renames

* create a fully partialized type

* Create graphql-fixtures

* cleanup

* clarify behaviour for multi-implementation interface spread

* typo

--- a/.gitignore
+++ b/.gitignore
@@ -5,5 +5,7 @@ packages/**/*.d.ts
 packages/graphql-tool-utilities/*.js
 packages/graphql-validate-fixtures/test/fixtures/**/schema.json
 packages/graphql-typescript-definitions/test/fixtures/**/schema.json
+packages/graphql-typescript-definitions/test/fixtures/**/schema.ts
 packages/graphql-typescript-definitions/test/fixtures/**/*.d.ts
 /lerna-debug.log
+yarn-error.log
