--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@ node_modules
 .DS_Store
 **/lib
 packages/**/*.d.ts
+packages/graphql-typed/*.js
 packages/graphql-tool-utilities/*.js
 packages/graphql-validate-fixtures/test/fixtures/**/schema.json
 packages/graphql-typescript-definitions/test/fixtures/**/schema.json
