Remove ESLint cache

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@ packages/graphql-typescript-definitions/test/fixtures/**/schema.ts
 packages/graphql-typescript-definitions/test/fixtures/**/*.d.ts
 /lerna-debug.log
 yarn-error.log
+.eslintcache
