--- a/packages/react-preconnect/package.json
+++ b/packages/react-preconnect/package.json
@@ -27,7 +27,7 @@
   },
   "devDependencies": {
     "enzyme": "^3.3.0",
-    "typescript": "^2.9.1"
+    "typescript": "~2.7.2"
   },
   "peerDependencies": {
     "react": "^16.4.0"
